--- a/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/layout/fragment/fragmentEquipment.fxml
+++ b/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/layout/fragment/fragmentEquipment.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<SplitPane fx:id="splitPaneEquipment" dividerPositions="0.5" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.greatlarder.technicalassistant.controller.fragment.FragmentEquipmentController">
-   <items>
-      <TabPane fx:id="tabPaneEquipment1" />
-      <TabPane fx:id="tabPaneEquipment2" />
-   </items>
-</SplitPane>
+
+<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.greatlarder.technicalassistant.controller.fragment.FragmentEquipmentController">
+   <center>
+      <SplitPane fx:id="splitPaneEquipment" dividerPositions="0.5">
+         <items>
+            <TabPane fx:id="tabPaneEquipment1" />
+            <TabPane fx:id="tabPaneEquipment2" />
+         </items>
+      </SplitPane>
+   </center>
+</BorderPane>
